--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ install:
   - npm install -g codecov
   - npm install -g istanbul
 script:
+  - webpack
   - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
   - codecov -t 2a2d74d6-2f58-4d79-8ed1-c3dcd0263e33
