--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unfuck",
   "version": "0.2.4",
   "description": "A brainfuck to Javascript compiler with optimizations.",
-  "main": "index.js",
+  "main": "dist/unfuck.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/toish/unfuck.git"
@@ -21,6 +21,10 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "mocha": "^3.2.0",
+    "webpack": "^2.2.1"
   }
 }
