--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "mocha": "^3.2.0",
-    "webpack": "^2.2.1",
-    "webpack-node-externals": "^1.5.4"
+    "webpack": "^2.2.1"
   }
 }
