--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "mocha": "^3.2.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.*"
   }
 }
